// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultDetailsButtons rendering renders expected elements 1`] = `
<div
  className="TestClass"
>
  <Button
    disabled={false}
    id="deleteBtn"
    onClick={[Function]}
    text="Delete"
  />
  <Button
    disabled={false}
    id="editBtn"
    onClick={[Function]}
    text="Edit"
    type="primary"
  />
</div>
`;

exports[`DefaultDetailsButtons rendering renders expected elements when disableEdit and disableDelete are set 1`] = `
<div>
  <Button
    disabled={true}
    id="deleteBtn"
    onClick={[Function]}
    text="Delete"
    tooltipText="Disable Delete"
  />
  <Button
    disabled={true}
    id="editBtn"
    onClick={[Function]}
    text="Edit"
    tooltipText="Disable Edit"
    type="primary"
  />
</div>
`;

exports[`DefaultDetailsButtons rendering renders expected elements when onDelete is not set 1`] = `
<div>
  <Button
    disabled={false}
    id="editBtn"
    onClick={[Function]}
    text="Edit"
    type="primary"
  />
</div>
`;
